[package]
name = "cch23-scandal47"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.35.0"
tracing = "0.1.40"
base64 = "0.21.5"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
rustemon = "3.2.1"